syntax = "proto3";

service Productpro {
  rpc GetById (GetByIdRequestpro) returns (GetByIdResponsepro);
}

message GetByIdRequestpro {
  string id = 1; 
}

message GetByIdResponsepro {
  string id = 1;
  string name = 2;
  string categoryName = 3;
  string summary = 4;
  string description = 5;
  string imageFile = 6;
  double price = 7;
}